# beacon

./: .env.template  .gitignore  BLOG.md  DEPLOY.md  EVAL.md  README.md  docker-compose.yml  docs_dag.mmd  pyproject.toml  requirements.txt
.github/workflows/: test.yml
.streamlit/: config.toml  secrets.toml.template
data/eval_snapshots/: 20260429T220743_v2-N7-baseline.json  20260429T234805_v2-N61.json  20260430T233658_v4-N44-full-hf-stack.json
db/: Dockerfile
scripts/: migrate_to_neon.sh
sql/: 001_init.sql  002_extract_status.sql  003_nbr_columns.sql  004_s1_columns.sql  005_emdat_table.sql  006_emdat_bbox.sql  007_benchmark_runs.sql  008_gdis_locations.sql  009_disaster_ground_truth.sql  010_imagery_metadata.sql  011_pgvector.sql  012_translations.sql  013_article_summary.sql  014_acled_events.sql  015_cost_and_feedback.sql
src/beacon/: acled.py  app.py  benchmark.py  claude.py  cli.py  config.py  cost.py  db.py  demo_seed.py  detect.py  dspy_synth.py  embed.py  emdat_geocoder.py  emdat_loader.py  eval_metrics.py  extract.py  firms.py  gdis_loader.py  geocode.py  imagery.py  ingest.py  latency.py  observability.py  segment.py  siglip.py  snapshots.py  summarize.py  synth.py  translate.py  tunables.py  vdr.py  verify.py  vision.py
src/beacon/graph/: __init__.py  dag.py  nodes.py  state.py
src/beacon/sources/: __init__.py  gdelt.py  models.py  newsapi.py
tests/: test_embed.py  test_emdat_geocoder.py  test_eval_metrics.py  test_extract.py  test_geocode.py  test_imagery.py  test_translate.py
